new proj/src/objects/RiskPathMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Stores mapping of fasttrack roles</description>
    <fields>
        <fullName>RiskPath__c</fullName>
        <label>Risk Path</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_2_P_L__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>RiskPathMapping</label>
</CustomObject>